--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
-
+    implementation 'com.google.firebase:firebase-storage:18.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
