--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".Authentication.AuthenticationActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".Camera.UploadImageActivity"
+            android:label="@string/app_name">
+        </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
